# shxy-save-editor

./: .gitignore  README.md  launch_gui.pyw  pyproject.toml  run_gui.bat  uv.md
src/shxy_save_editor/: __init__.py  cli.py  gui.py  locator.py  model.py  rmmzsave.py
tests/: test_cli_explain.py  test_locator_model.py  test_model.py  test_rmmzsave.py
